# kaching-settle

./: .gitignore  README.md  apply_fixes.py  apply_score.py  fix_env.py  fix_instant_settle.py  fix_mypositions.py  fix_score_persist.py  package-lock.json  package.json  update_docs.py  wallet-keypair.json
.github/workflows/: deploy.yml
backend/: .env.example  apply_score.py  package-lock.json  package.json
backend/idl/: kaching_settle.json
backend/shared/: config.js  idl.json
backend/src/: server.js  sockets.js
backend/src/ai/: pundit.js  voice.js
backend/src/keeper/: auto-market.js  settle-trigger.js
backend/src/program/: client.js  txoracle.js
backend/src/txline/: auth.js  fixtures.js  normalize.js  stream.js  validate.js
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  ENDPOINTS.md  FEEDBACK.md  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: DepositBox.jsx  LiveFeed.jsx  PotMeter.jsx  Receipt.jsx  VoicePlayer.jsx  WalletButton.jsx
frontend/src/lib/: idl.json  socket.js  solana.js
frontend/src/pages/: MarketList.jsx  MarketView.jsx  MyPositions.jsx
frontend/src/styles/: app.css
program/: Anchor.toml  Cargo.toml
program/programs/kaching-settle/: Cargo.toml
program/programs/kaching-settle/src/: constants.rs  errors.rs  lib.rs
program/programs/kaching-settle/src/instructions/: deposit.rs  mod.rs  refund.rs  settle.rs  void_market.rs
program/programs/kaching-settle/src/state/: market.rs  mod.rs  position.rs
program/src/: lib.rs
program/src/instructions/: claim.rs  create_market.rs  deposit.rs  lock_market.rs  mod.rs
scripts/: create-market.js  create-usdc.js  decode-market.js  deposit.js  diag.js  extend-program.js  fetch-idl.js  init-token-account.js  manual-settle.js  reactivate.js  seed-all-markets.js  seed-market.js  send-usdc.js  spike.js  subscribe.js  transfer-back.js
shared/: config.js  constants.js
