[package]
name = "kaching-settle"
version = "0.1.0"
description = "Trustless match settlement using TxLINE Merkle proofs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kaching_settle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
