[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
zeroize_derive = { version = "=1.4.2" }
cpufeatures = { version = "=0.2.12" }
toml_datetime = { version = "=0.6.3" }
crypto-common = { version = "=0.1.6" }
hashbrown = { version = "=0.14.5" }
